[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vuer"
version = "0.0.12"
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "aiohttp",
    "aiohttp-cors",
    "killport",
    "params-proto>=2.11.16",
    "pillow",
    "tqdm",
    "msgpack",
    "numpy",
    "termcolor",
    "trimesh",
    "websockets",
]

[project.optional-dependencies]
# Development packages
dev = [
    "black==22.3.0",
    "pylint==2.13.4",
    "pytest==7.1.2",
]

[project.scripts]
# Note, add entrypoint name to scripts/completions/install.py to include CLI completion
vuer = "vuer:entrypoint"

[tool.setuptools.packages.find]
include = ["vuer*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = []
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = []
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
    "duplicate-code",
    "fixme",
    "logging-fstring-interpolation",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "unnecessary-ellipsis",
]

#pytest
#[tool.pytest.ini_options]
#addopts = "-n=4 --typeguard-packages=vuer --disable-warnings"
#testpaths = [
#    "tests",
#]

# pyright
[tool.pyright]
include = ["vuer"]
exclude = ["**/node_modules", "**/__pycache__", ]
#ignore = ["nerf_vuer"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUndefinedVariable = false

pythonVersion = "3.8"
pythonPlatform = "Linux"
